@@ -56,6 +56,7 @@ ikiwiki (2.41) UNRELEASED; urgency=low
     (Old files will be automatically converted.)
   * Close meta tag for redir properly.
   * smiley: Detect smileys inside pre and code tags, and do not expand.
+  * inline: Crazy optimisation to work around slow markdown.
 
  -- martin f. krafft <madduck@debian.org>  Sun, 02 Mar 2008 17:46:38 +0100
 
